--- a/new.css
+++ b/new.css
@@ -1,6 +1,6 @@
 ﻿.container {
-    background:url(фон1.jpg) no-repeat;
-    background-size:100%;
+    background: url() no-repeat;
+    background-size: 100%;
     margin: 0px auto;
     min-width: 1350px;
     max-width: 1350px;
@@ -19,7 +19,12 @@ html {
     background: #d3d3d3 no-repeat;
 
 }
-.prozr {
+.fona {
+    background: url(image3.jpg) no-repeat;
+    background-size: 100%;
+    margin: 0px auto;
+}
+.prozrach {
     background: rgba(0,0,0,0.5);
     width: 100%;
     padding: 0px 0px 0px 0px;
@@ -27,9 +32,9 @@ html {
 }
 header {
     width: 100%;
-    background: url(пробы.jpg) no-repeat;
+    background: url(пробы3.jpg) no-repeat;
     min-height: 100px;
-    height: 306px;
+    height: 286px;
     padding: 0px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
     font-size: 1.6em;
@@ -67,7 +72,7 @@ header.poz{
 dannie {
     float: left;
     margin-left: 7.2%;
-    margin-top: 13.8%;
+    margin-top: 12.40%;
     font-weight:300;
 }
 
@@ -77,7 +82,7 @@ dannie {
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
     margin-left: 0px;
-    padding: 10px 0px 10px 30px; 
+    padding: 10px 0px 10px 30px;
     color: #e0e0e0;
     font-family: initial;
     font-size: 1.1em;
@@ -90,49 +95,74 @@ dannie {
         text-decoration: none;
         opacity: 0.7;
     }
-reklama {
-    background: url(https://c.wallhere.com/photos/ec/af/blue_texture_abstract-1442239.jpg!d) no-repeat #280737;
-    background-size: 100% auto; 
-    width: 100%;
-    height: 305px;
+
+.reklama {
+    background: url(фон1.png);
+    opacity: 1;
+    width: 70%;
+    margin: 100px 50px 20px 14%;
+    height: 400px;
     border: 10px medium #280737;
-    float: left; 
+    float: left;
     padding: 10px;
-    color: #3854fc;
-    font-family: Webdings,sans-serif;
-    font-size: 1.1em;
+    border-radius: 5px;
+    z-index: 2;
+    position: relative;
+}
+.chernfon {
+    background: black;
+    width: 70%;
+    margin: -441px 50px 20px 14%;
+    height: 400px;
+    padding: 0px 15px 57px 0px;
+    border-radius:60px;
+    z-index: 1;
+    position: relative;
+    float: left;
+    opacity:0.35;
+}
+.block {
+    width: 70%;
+    margin: -440px 50px 20px 14%;
+    height: 400px;
+    border: 10px medium #280737;
+    float: left;
+    padding: 0px;
+    z-index: 3;
+    position: relative;
+}
+#tabl {
+    list-style:url(лого2.png);
+    line-height: 1.8;
+    margin: 10px;
+    color: #fff;
+    font-weight: 900;
+    list-style-position: inside;
+    list-style-type: disc;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, Arial, sans-serif;
+    font-size: 1.9em;
+    text-indent: 1.1em;
 }
 zachem {
-
+    
     border: 3px double blue;
     margin: 20px 50px 20px 10%;
-    background: #088bd7;
     background-size: 100% auto; 
     height: 300px;
-    border: 10px medium #280737;
+    border: 10px medium;
     float: left; 
     padding: 10px;
-    color: #ffff;
+    color: black;
     font-family: Webdings,sans-serif;
     font-size: 1.4em;
     text-indent: 1.1em;
+    font-weight:500;
 }
 #shrift{
     font-size:30px;
     font-family:fantasy;
 }
 
-#tabl {
-    line-height: 1.8;
-    margin: 10px;
-    font-weight:700;
-    list-style-position: inside;
-    list-style-type:disc;
-    font-family: 'Global Serif';
-    font-size: 1.8em;
-    padding: 5px;
-    text-indent: 1.1em;
-}
 footer {
     background: linear-gradient(black,#3854fc,#28d9d9,#3854fc,black);
     background-size: 100%; 
